--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,53 @@
-<h1>Lucas Gomes Araujo</h1>
+<h1>Welcome to CSE Motors!</h1>
+<div class="hero">
+    <img src="images/vehicles/delorean.jpg" alt="DMC Delorean">
+    <section>
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <a href="/">Own Today</a>
+    </section>
+</div>
+<div class="flexbox-container">
+    <div class="delorian-reviews">
+        <h3>DMC Delorean Reviews</h3>
+        <ul>
+            <li>"So fast it's almost like travelling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin' and I love it!" (5/5)</li>
+        </ul>
+    </div>
+    <div class="delorian-upgrades">
+        <h3>Delorean Upgrades</h3>
+        <div class="grid-container">
+            <figure>
+                <div class="container">
+                    <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor Image">
+                </div>
+                <figcaption><a href="/">Flux Capacitor</a></figcaption>
+            </figure>
+            <figure>
+                <div class="container">
+                    <img src="images/upgrades/flame.jpg" alt="Flame Image">
+                </div>
+                <figcaption><a href="/">Flame Decals</a></figcaption>
+            </figure>
+            <figure>
+                <div class="container">
+                    <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker Image">
+                </div>
+                <figcaption><a href="/">Bumper Stickers</a></figcaption>
+            </figure>
+            <figure>
+                <div class="container">
+                    <img src="images/upgrades/hub-cap.jpg" alt="Hub Cap Image">
+                </div>
+                <figcaption><a href="/">Hub Caps</a></figcaption>
+            </figure>
+        </div>
+    </div>
+</div>
+
