--- a/public/css/large.css
+++ b/public/css/large.css
@@ -27,7 +27,7 @@
     }
 
     h2 {
-        font-size: 22pt;
+        font-size: 20pt;
     }
 
     li {
@@ -53,9 +53,10 @@
 
     /* Inventory Display Styles */
     #inv-display {
-        margin-top: 1rem;
+        width: 633px;
+        margin: 1rem auto;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, 200px);
         gap: 1rem;
     }
 
