--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <% const d = new Date()
 let year = d.getFullYear() %>
 <footer>
-    <p class="copyright">&copy; <%= year %>, CSE 340 App</p>    
+    <p class="copyright">&copy;<%= year %>, Lucas G. Araujo | CSE 340 App</p>
+    <a href="../../error" title="Intentional 500 Server Error View">Error Link</a>
 </footer>
