--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CSE 340 Web App Project: CSE Motors">
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css" media="screen">
     <link rel="stylesheet" href="/css/large.css" media="screen">
