--- a/public/css/large.css
+++ b/public/css/large.css
@@ -72,4 +72,14 @@
     .detailsView div {
         margin-top: 0;
     }
+
+    /* Styles for Login form */
+    .form-field {
+        width: 65%;
+        margin: 2rem auto 0;
+    }
+
+    .form-field label {
+        font-size: 16pt;
+    }
 }
