--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,5 +2,5 @@
 let year = d.getFullYear() %>
 <footer>
     <p class="copyright">&copy;<%= year %>, Lucas G. Araujo | CSE 340 App</p>
-    <a href="../../error" title="Intentional 500 Server Error View">Error Link</a>
+    <a href="/error" title="Intentional 500 Server Error View">Error Link</a>
 </footer>
