Week 04 team activity completed

--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -6,6 +6,7 @@
 } %>
 
 <!-- Message -->
+<%- messages() %>
 <% if (errors) { %>
     <ul class="error">
     <% errors.array().forEach(error => { %>
@@ -21,9 +22,9 @@
     <p>All inputs are required</p>
     <hr>
     <form action="/account/register" method="post">
-        <label>First Name: <input type="text" name="account_firstname" required></label>
-        <label>Last Name: <input type="text" name="account_lastname" required></label>
-        <label>Email Address: <input type="email" name="account_email" required></label>
+        <label>First Name: <input type="text" name="account_firstname" required value="<%= locals.account_firstname %>"></label>
+        <label>Last Name: <input type="text" name="account_lastname" required value="<%= locals.account_lastname %>"></label>
+        <label>Email Address: <input type="email" name="account_email" required value="<%= locals.account_email %>"></label>
         <label class="pw">Password: <input type="password" name="account_password" required id="pwInput" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><span id="showPw">Show</span></label>
         <input type="submit" value="Register">
     </form>
