--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,5 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css" media="screen">
     <link rel="stylesheet" href="/css/large.css" media="screen">
+    <link rel="icon" type="image/x-icon" href="/images/site/icon.png">
 </head>
