--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -30,4 +30,4 @@
     <p>No account? <a href="/account/register">Sign Up</a></p>
 </div>
 
-<script src="/js/script.js"></script>
+<script src="/js/show-password.js"></script>
