--- a/views/inventory/index.ejs
+++ b/views/inventory/index.ejs
@@ -11,3 +11,12 @@
     <a href="/inv/add-classification">Add New Clasification</a>
     <a href="/inv/add-inventory">Add New Inventory</a>
 </div>
+
+<h2>Manage Inventory</h2>
+<div class="manage-inventory">
+    <%- classificationSelect %>
+    <table id="inventoryDisplay"></table>
+    <noscript>JavaScript must be enabled to use this page.</noscript>
+</div>
+
+<script src="../../js/inventory.js"></script>
