--- a/public/css/large.css
+++ b/public/css/large.css
@@ -17,6 +17,11 @@
         border-radius: 15px;
     }
 
+    /* Styles for header */
+    #tools {
+        top: 3rem;
+    }
+
     /* Font Styles */
     .cse-motors a {
         font-size: 30pt;
