--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,7 +56,7 @@ body {
 
 #tools {
   right: 1rem;
-  top: 2rem;
+  top: 1rem;
   position: absolute;
 }
 
@@ -228,6 +228,10 @@ footer {
 }
 
 /* Styles for form fields */
+select:hover {
+  cursor: pointer;
+}
+
 .form-field {
   margin-top: 2rem;
   background-color: rgba(0, 0, 0, 0.87);
@@ -406,4 +410,24 @@ textarea:invalid:focus::placeholder {
 
 .manage-inventory tbody tr:nth-child(odd) {
   background-color: rgba(255, 255, 255, .2);
+}
+
+/* Styles for account management */
+.account-management h2,
+.account-management h3 {
+  padding: 1rem;
+}
+
+.account-management p {
+  margin-left: 2rem;
+}
+
+.account-management a {
+  text-decoration: none;
+  font-weight: 700;
+  color: navy;
+}
+
+.account-management a::before {
+  content: "► ";
 }
