--- a/views/account/index.ejs
+++ b/views/account/index.ejs
@@ -7,14 +7,14 @@
 
 <!-- Message -->
 <%- messages() %>
-<% if (errors) { %>
-    <ul class="error">
-    <% errors.array().forEach(error => { %>
-        <% if (error.msg !== "Invalid value") { %>
-        <li><%= error.msg %></li>
-        <% } %>
-    <% }) %>
-    </ul>
-<% } %> 
 
-<h2>You're logged in</h2>
+<div class="account-management">
+    <h2>Welcome <%= locals.accountData.account_firstname %></h2>
+    <p>You're logged in.</p>
+    <p><a href="/account/update/<%= locals.accountData.account_id %>">Update Account Information</a></p>
+    
+    <% if (['Employee', 'Admin'].includes(locals.accountData.account_type)) { %>
+        <h3>Inventory Management</h3>
+        <p><a href="/inv/" title="Click to go to inventory management options">Manage Inventory</a></p>
+    <% } %>
+</div>
