--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <h1>Welcome to CSE Motors!</h1>
+
+<!-- Message -->
 <%- messages() %>
+
 <div class="hero">
     <img src="images/vehicles/delorean.jpg" alt="DMC Delorean">
     <section>
