--- a/views/account/index.ejs
+++ b/views/account/index.ejs
@@ -18,3 +18,5 @@
         <p><a href="/inv/" title="Click to go to inventory management options">Manage Inventory</a></p>
     <% } %>
 </div>
+
+<%- reviews %>
