--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -223,6 +223,52 @@ footer {
   padding: 1rem;
 }
 
+/* Styles for Reviews List in Details */
+#reviews-container {
+  padding: 1rem;
+  & h3 {
+    font-size: 15pt;
+    margin-bottom: .5rem;
+  }
+  & ul.reviews {
+    & li {
+      list-style: none;
+      border: 1px solid black;
+      padding: .5rem;
+      margin-bottom: .5rem;
+      & p:first-child {
+        border-bottom: 3px double black;
+        padding-bottom: .5rem;
+        margin-bottom: .5rem;
+      }
+    }
+  }
+}
+
+/* Styles for Add Review */
+.add-review {
+  padding: 1rem;
+  & h3 {
+    font-size: 16pt;
+    margin-bottom: .5rem;
+  }
+  & a {
+    text-decoration: none;
+    font-weight: 700;
+    color: black;
+  }
+  & a:hover {
+    color: yellow;
+  }
+}
+
+/* Styles for Review List in account management */
+ol.reviews {
+  & li {
+    margin: 1.5rem;
+  }
+}
+
 .detailsView li:nth-child(odd) {
   background-color: rgb(230, 230, 230);
 }
@@ -249,6 +295,13 @@ select:hover {
 .manage-inventory select {
   display: block;
   width: 100%;
+}
+
+.form-field input[readonly],
+.form-field textarea[readonly] {
+  background-color: rgba(230, 230, 230, .9);
+  color: rgba(150, 150, 150);
+  font-weight: 700;
 }
 
 .form-field input,
